--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "encore/laravel-admin": "^1.6",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
+        "laravel/installer": "^2.0",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.7.*",
         "tcg/voyager": "^1.1"
